# rain2flow

./: .gitignore  README.md  pyproject.toml
docs/: requirements.txt
docs/source/: conf.py  index.rst  installation.rst
examples/: data.csv  hbv.py  readme.txt
rain2flow/: __init__.py  utils.py
rain2flow/_hbv/: __init__.py  _main.py  _numba.py
tests/hbv/: test_main.py  test_numba.py
