[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rain2flow"
version = "0.1.0"
description = "conceptual rainfall runoff models"
readme = "README.md"
requires-python = ">=3.5"
license = { file = "LICENSE" }
authors = [
    { name="Ather Abbas", email="ather.abbas.cheema@gmail.com" },
]
urls = { Homepage = "https://github.com/AtrCheema/rain2flow" }

classifiers = [
    "Development Status :: 4 - Beta",
    "Natural Language :: English",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.17, <2.4.0",
]

[project.optional-dependencies]
all = [
    "numpy>=1.17, <2.4.0",
    "numba",
]

[tool.setuptools.packages.find]
where = ["."]